# Vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandBuffers.cpp  CommandBuffers.h  CommandManager.cpp  CommandManager.h  Context.cpp  Context.h  DescriptorSet.cpp  Device.cpp  Device.h  FirstApp.cpp  FirstApp.h  FrameBuffers.cpp  FrameBuffers.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Instance.cpp  Instance.h  README.md  RenderPass.cpp  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  SwapChain_old.cpp  SwapChain_old.h  SyncObjects.cpp  SyncObjects.h  UniformBuffers.cpp  UniformBuffers.h  Utils.cpp  Utils.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  (+2 more)
Old/: CommandBuffers.h  Device.cpp  Device.h  FirstApp.cpp  FirstApp.h  FrameBuffers.cpp  FrameBuffers.h  RenderPass.h  SwapChain_old.h  SyncObjects.cpp  SyncObjects.h
Shaders/: CMakeLists.txt  compile.sh
models/castle/: castle.mtl
shaders/: CMakeLists.txt  compile.sh  shader.frag  shader.vert  shaderO.frag  shaderOld.frag  shadowShader.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  Clock.cpp  Clock.h  ColorResources.cpp  ColorResources.h  CommandManager.cpp  CommandManager.h  Context.cpp  DepthResources.cpp  DepthResources.h  DescriptorSet.cpp  DescriptorSet.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  LightUniformBuffer.cpp  LightUniformBuffer.h  MessageLogger.cpp  ModelUniformBuffer.h  Renderer.cpp  Renderer.h  ShadowDescriptorSet.cpp  ShadowPipeline.cpp  ShadowPipeline.h  SwapChain.cpp  SwapChain.h  SyncObjects.cpp  SyncObjects.h  Timer.cpp  Timer.h  UniformBuffers.cpp  UniformBuffers.h  Utils.cpp  Utils.h  VertexBuffer.cpp  VertexBuffer.h  VulkanApp.cpp  (+4 more)
src/Applications/: CMakeLists.txt  FirstApp.cpp
src/Applications/VulkanApp/: CMakeLists.txt  VulkanApp.cpp  VulkanApp.h  main.cpp
src/Camera/: CMakeLists.txt  Camera.cpp  Camera.h
src/General/: CMakeLists.txt  Context.cpp  Context.h  DepthResources.cpp  DepthResources.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Window.cpp  Window.h
src/Geometry/: CMakeLists.txt  Vertex.cpp  Vertex.h
src/GraphicsPipeline/: CMakeLists.txt  DescriptorSet.cpp  DescriptorSet.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h
src/ImGuiPipeline/: CMakeLists.txt  VkImGui.cpp  VkImGui.h
src/Math/: BBox.cpp  BBox.h  CMakeLists.txt
src/Message/: CMakeLists.txt  MessageLogger.h
src/ModelLoader/: AbsLoader.cpp  AbsLoader.h  AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  GLTFLoader.cpp  GLTFLoader.h  ModelLoader.cpp  ModelLoader.h  ModelMaterial.cpp  ModelMaterial.h  ModelMesh.cpp  ModelMesh.h  ModelVertex.cpp  ModelVertex.h  OBJLoader.cpp  OBJLoader.h
src/ShadowPipeline/: CMakeLists.txt  ShadowDescriptorSet.cpp  ShadowDescriptorSet.h  ShadowPipeline.cpp  ShadowPipeline.h
src/UniformBuffers/: CMakeLists.txt  DirectionalLightBuffer.cpp  DirectionalLightBuffer.h  ModelUniformBuffer.cpp  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VulkanModelLoader.cpp  VulkanModelLoader.h
